--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          curl --location '${{ secrets.WEBHOOK_URL }}' \
+--header 'Content-Type: application/json' \
+--data '{"content":"Today I will say some words of Ancient Gods"}'
