--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          bash checkCommit.sh juancolchete 
-          curl --location '${{ secrets.WEBHOOK_URL }}' --header 'Content-Type: application/json' --data '{"content":"Today I will say some words of Ancient Gods"}'
+          bash checkCommit.sh juancolchete a 
