--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          bash checkCommit.sh juancolchete a 
+          bash checkCommit.sh juancolchete ${{ secrets.WEBHOOK_URL }}
