--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run a multi-line script
         run: |
-          bash checkCommit.sh juancolchete ${{ secrets.WEBHOOK_URL }} ${{ vars.MIN_DAILY_COMMIT_COUNT }}
+          bash checkCommit.sh ${{  vars.GIT_USER }} ${{ secrets.WEBHOOK_URL }} ${{ vars.MIN_DAILY_COMMIT_COUNT }}
