--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,15 @@ jobs:
       - name: Run a multi-line script
         run: |
           bash checkCommit.sh ${{  vars.GIT_USER }} ${{ secrets.WEBHOOK_URL }} ${{ vars.MIN_DAILY_COMMIT_COUNT }}
+      - name: Upload to git
+        id: uploadGit
+        run: |
+          if [[ `git status --porcelain` ]]; then
+            git config --global user.name "juancolchete"
+            git config --global user.email "juancolchete@gmail.com"
+            git add . 
+            git commit -m "file: ${{github.event.head_commit.message}}"
+            git push
+          else
+            echo "no changes to push"
+          fi
