ci: calculate user streak when run reminder actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
     - cron: "* 12-23 * * *"
   workflow_dispatch:
 jobs:
+  calculteUserStreak:
+    uses: colchetedao/actionPlayground/.github/workflows/calculateUserStreak.yml@main
+    secrets: inherit
   build:
     environment:
       name: ${{ github.ref_name }}
