--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
   workflow_dispatch:
 jobs:
   calculteUserStreak:
-    uses: colchetedao/streakCounter/.github/workflows/saveContributionCountPerDay.yml@main
+    #uses: colchetedao/streakCounter/.github/workflows/saveContributionCountPerDay.yml@main
+    uses: colchetedao/actionPlayground/.github/workflows/workflow-called.yml@main
     secrets: inherit
   build:
     environment:
