ci: trigger workflow
Removed the calculteUserStreak job and added a step to trigger a remote workflow using curl.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,17 @@ on:
     - cron: "0,30 12-23 * * *"
   workflow_dispatch:
 jobs:
-  calculteUserStreak:
-    uses: colchetedao/streakCounter/.github/workflows/saveContributionCountPerDay.yml@main
-    secrets: inherit
   reminderUser:
-    needs: [calculteUserStreak]
     environment:
       name: ${{ github.ref_name }}
     runs-on: ubuntu-latest
     steps:
+      - name: Trigger Remote Workflow
+        run: |
+          curl -X POST \
+          -H "Authorization: token ${{ secrets.PAT }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/OWNER/REPO/actions/workflows/WORKFLOW_FILE.yml/dispatches
       - uses: actions/checkout@v4
       - name: Run a multi-line script
         run: |
