--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           -H "Authorization: token ${{ secrets.PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/colchetedao/streakCounter/actions/workflows/saveContributionCountPerDay.yml/dispatches
+          -d '{"ref":"main"}'
       - uses: actions/checkout@v4
       - name: Run a multi-line script
         run: |
